--- a/Assignment3.html
+++ b/Assignment3.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>assignment1</title>
+<title>assignment3 – Eman Ajmal</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -23,248 +23,227 @@ ul.task-list li input[type="checkbox"] {
 </style>
 
 
-<script src="Assignment1_files/libs/clipboard/clipboard.min.js"></script>
-<script src="Assignment1_files/libs/quarto-html/quarto.js"></script>
-<script src="Assignment1_files/libs/quarto-html/popper.min.js"></script>
-<script src="Assignment1_files/libs/quarto-html/tippy.umd.min.js"></script>
-<script src="Assignment1_files/libs/quarto-html/anchor.min.js"></script>
-<link href="Assignment1_files/libs/quarto-html/tippy.css" rel="stylesheet">
-<link href="Assignment1_files/libs/quarto-html/quarto-syntax-highlighting.css" rel="stylesheet" id="quarto-text-highlighting-styles">
-<script src="Assignment1_files/libs/bootstrap/bootstrap.min.js"></script>
-<link href="Assignment1_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="Assignment1_files/libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
+<script src="site_libs/quarto-nav/quarto-nav.js"></script>
+<script src="site_libs/quarto-nav/headroom.min.js"></script>
+<script src="site_libs/clipboard/clipboard.min.js"></script>
+<script src="site_libs/quarto-search/autocomplete.umd.js"></script>
+<script src="site_libs/quarto-search/fuse.min.js"></script>
+<script src="site_libs/quarto-search/quarto-search.js"></script>
+<meta name="quarto:offset" content="./">
+<script src="site_libs/quarto-html/quarto.js"></script>
+<script src="site_libs/quarto-html/popper.min.js"></script>
+<script src="site_libs/quarto-html/tippy.umd.min.js"></script>
+<script src="site_libs/quarto-html/anchor.min.js"></script>
+<link href="site_libs/quarto-html/tippy.css" rel="stylesheet">
+<link href="site_libs/quarto-html/quarto-syntax-highlighting.css" rel="stylesheet" id="quarto-text-highlighting-styles">
+<script src="site_libs/bootstrap/bootstrap.min.js"></script>
+<link href="site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
+<link href="site_libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
+<script id="quarto-search-options" type="application/json">{
+  "location": "navbar",
+  "copy-button": false,
+  "collapse-after": 3,
+  "panel-placement": "end",
+  "type": "overlay",
+  "limit": 50,
+  "keyboard-shortcut": [
+    "f",
+    "/",
+    "s"
+  ],
+  "show-item-context": false,
+  "language": {
+    "search-no-results-text": "No results",
+    "search-matching-documents-text": "matching documents",
+    "search-copy-link-title": "Copy link to search",
+    "search-hide-matches-text": "Hide additional matches",
+    "search-more-match-text": "more match in this document",
+    "search-more-matches-text": "more matches in this document",
+    "search-clear-button-title": "Clear",
+    "search-text-placeholder": "",
+    "search-detached-cancel-button-title": "Cancel",
+    "search-submit-button-title": "Submit",
+    "search-label": "Search"
+  }
+}</script>
 
 
+<link rel="stylesheet" href="styles.css">
 </head>
 
-<body class="fullcontent">
+<body class="nav-fixed">
 
-<div id="quarto-content" class="page-columns page-rows-contents page-layout-article">
-
+<div id="quarto-search-results"></div>
+  <header id="quarto-header" class="headroom fixed-top">
+    <nav class="navbar navbar-expand-lg " data-bs-theme="dark">
+      <div class="navbar-container container-fluid">
+      <div class="navbar-brand-container mx-auto">
+    <a class="navbar-brand" href="./index.html">
+    <span class="navbar-title">Eman Ajmal</span>
+    </a>
+  </div>
+            <div id="quarto-search" class="" title="Search"></div>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" role="menu" aria-expanded="false" aria-label="Toggle navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">
+  <span class="navbar-toggler-icon"></span>
+</button>
+          <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav navbar-nav-scroll ms-auto">
+  <li class="nav-item">
+    <a class="nav-link" href="./index.html"> 
+<span class="menu-text">Home</span></a>
+  </li>  
+  <li class="nav-item">
+    <a class="nav-link" href="./About.html"> 
+<span class="menu-text">About</span></a>
+  </li>  
+  <li class="nav-item">
+    <a class="nav-link" href="./Project.html"> 
+<span class="menu-text">Project</span></a>
+  </li>  
+  <li class="nav-item dropdown ">
+    <a class="nav-link dropdown-toggle" href="#" id="nav-menu-assignments" role="link" data-bs-toggle="dropdown" aria-expanded="false">
+ <span class="menu-text">Assignments</span>
+    </a>
+    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="nav-menu-assignments">    
+        <li>
+    <a class="dropdown-item" href="./Assignment1.html">
+ <span class="dropdown-text">Assignment 1</span></a>
+  </li>  
+        <li>
+    <a class="dropdown-item" href="./Assignment2.qmd">
+ <span class="dropdown-text">Assignment 2</span></a>
+  </li>  
+        <li>
+    <a class="dropdown-item" href="./Assignment3.html">
+ <span class="dropdown-text">Assignment 3</span></a>
+  </li>  
+        <li>
+    <a class="dropdown-item" href="./Assignment4.html">
+ <span class="dropdown-text">Assignment 4</span></a>
+  </li>  
+    </ul>
+  </li>
+</ul>
+          </div> <!-- /navcollapse -->
+            <div class="quarto-navbar-tools">
+</div>
+      </div> <!-- /container-fluid -->
+    </nav>
+</header>
+<!-- content -->
+<div id="quarto-content" class="quarto-container page-columns page-rows-contents page-layout-article page-navbar">
+<!-- sidebar -->
+<!-- margin-sidebar -->
+    <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
+        <nav id="TOC" role="doc-toc" class="toc-active">
+    <h2 id="toc-title">On this page</h2>
+   
+  <ul>
+  <li><a href="#assignment-3" id="toc-assignment-3" class="nav-link active" data-scroll-target="#assignment-3">Assignment 3</a>
+  <ul class="collapse">
+  <li><a href="#question-2" id="toc-question-2" class="nav-link" data-scroll-target="#question-2">Question 2</a></li>
+  <li><a href="#question-3" id="toc-question-3" class="nav-link" data-scroll-target="#question-3">Question 3</a></li>
+  <li><a href="#question-4" id="toc-question-4" class="nav-link" data-scroll-target="#question-4">Question 4</a></li>
+  </ul></li>
+  </ul>
+</nav>
+    </div>
+<!-- main -->
 <main class="content" id="quarto-document-content">
 
 
 
 
-<section id="assignment-1" class="level1">
-<h1>Assignment 1</h1>
-<section id="question-1" class="level2">
-<h2 class="anchored" data-anchor-id="question-1">Question 1</h2>
-<p>Name and describe three applications you have used that employed a database system to store and access persistent data (e.g., airlines, online trade, banking, university system).</p>
-<section id="online-banking" class="level3">
-<h3 class="anchored" data-anchor-id="online-banking">1. Online Banking</h3>
-<ul>
-<li>How it Uses Databases: Stores customer data, transactions, and account details.</li>
-<li>Reasoning: Ensures secure, fast, and reliable access to banking information.</li>
-</ul>
-</section>
-<section id="e-commerce-e.g.-amazon" class="level3">
-<h3 class="anchored" data-anchor-id="e-commerce-e.g.-amazon">2. E-commerce (e.g., Amazon)</h3>
-<ul>
-<li>How it Uses Databases: Manages product listings, customer orders, and payments.</li>
-<li>Reasoning: Uses a relational database to store structured data and provide recommendations.</li>
-</ul>
-</section>
-<section id="university-management-systems" class="level3">
-<h3 class="anchored" data-anchor-id="university-management-systems">3. University Management Systems</h3>
-<ul>
-<li>How it Uses Databases: Stores student records, enrollments, and grades.</li>
-<li>Reasoning: Ensures students and faculty have real-time access to course materials and academic records.</li>
-</ul>
-</section>
-</section>
+<section id="assignment-3" class="level1">
+<h1>Assignment 3</h1>
 <section id="question-2" class="level2">
 <h2 class="anchored" data-anchor-id="question-2">Question 2</h2>
-<p>Propose three applications in domain projects (e.g., criminology, economics, brain science, etc.). Be sure to include: 1.Purpose 2.Functions 3.Simple interface design</p>
-<section id="community-well-being-tracker" class="level3">
-<h3 class="anchored" data-anchor-id="community-well-being-tracker">1. Community Well-Being Tracker</h3>
-<ul>
-<li>Purpose: Measures and tracks social well-being indicators like mental health, employment, and community engagement.</li>
-<li>Functions:
-<ul>
-<li>Collects survey responses on life satisfaction, stress levels, and social interactions.</li>
-<li>Tracks changes in employment, education, and local crime rates.</li>
-<li>Provides visual reports and insights for policymakers and community leaders.</li>
-</ul></li>
-<li>Simple Interface Design: A dashboard displays key indicators like mental health scores, employment trends, and community engagement in charts and graphs. Users can fill out surveys to update data, and policymakers can generate reports with visual insights. The interface includes a homepage overview, survey page, and a report export option.</li>
-</ul>
+<p>Write SQL codes to get a list of:</p>
+<ol type="i">
+<li><p>Students IDs (hint: from the takes relation) <img src="Images/Q1Assignment3.png" class="img-fluid" alt="Q1Assignment3"></p></li>
+<li><p>Instructors</p></li>
+</ol>
+<div class="quarto-figure quarto-figure-center">
+<figure class="figure">
+<p><img src="Images/Q2bAssignment3.png" class="img-fluid figure-img"></p>
+<figcaption>Q2bAssignment3</figcaption>
+</figure>
+</div>
+<ol start="3" type="i">
+<li>Departments</li>
+</ol>
+<div class="quarto-figure quarto-figure-center">
+<figure class="figure">
+<p><img src="Images/Q2cAssignment3.png" class="img-fluid figure-img"></p>
+<figcaption>Q2cAssignment3</figcaption>
+</figure>
+</div>
 </section>
-<section id="digital-public-opinion-analyzer" class="level3">
-<h3 class="anchored" data-anchor-id="digital-public-opinion-analyzer">2. Digital Public Opinion Analyzer</h3>
-<ul>
-<li>Purpose: Analyzes public sentiment on social issues by gathering data from social media and news sources.</li>
-<li>Functions:
-<ul>
-<li>Collects and categorizes posts on topics like inequality, human rights, and policy changes.</li>
-<li>Uses sentiment analysis to determine whether opinions are positive, negative, or neutral.</li>
-<li>Generates reports on trending social issues over time.</li>
-</ul></li>
-<li>Simple Interface Design: Users enter keywords to analyze public sentiment from news and social media, displayed through a word cloud, sentiment pie chart, and regional heatmap. A live feed shows relevant posts, and a report generation page allows data exports. The interface is search-focused with real-time insights.</li>
-</ul>
+<section id="question-3" class="level2">
+<h2 class="anchored" data-anchor-id="question-3">Question 3</h2>
+<p>Write in SQL codes to do following queries:</p>
+<ol type="i">
+<li>Find the ID and name of each student who has taken at least one Comp. Sci. course; make sure there are no duplicate names in the result.</li>
+</ol>
+<div class="quarto-figure quarto-figure-center">
+<figure class="figure">
+<p><img src="Images/Q3aAssignment3.png" class="img-fluid figure-img"></p>
+<figcaption>Q3aAssignmnet3</figcaption>
+</figure>
+</div>
+<ol start="2" type="i">
+<li><p>Add grades to the list <img src="Images/Q3bAssignment3.png" class="img-fluid" alt="Q3bAssignment3"></p></li>
+<li><p>Find the ID and name of each student who has not taken any course offered before 2017.</p></li>
+</ol>
+<div class="quarto-figure quarto-figure-center">
+<figure class="figure">
+<p><img src="Images/Q3cAssignment3.png" class="img-fluid figure-img"></p>
+<figcaption>Q3cAssignment3</figcaption>
+</figure>
+</div>
+<ol start="4" type="i">
+<li>For each department, find the maximum salary of instructors in that department. You may assume that every department has at least one instructor.</li>
+</ol>
+<div class="quarto-figure quarto-figure-center">
+<figure class="figure">
+<p><img src="Images/Q3dAssignment3.png" class="img-fluid figure-img"></p>
+<figcaption>Q3dAssignment3</figcaption>
+</figure>
+</div>
+<ol start="22" type="a">
+<li>Find the lowest, across all departments, of the per-department maximum salary computed by the preceding query.</li>
+</ol>
+<div class="quarto-figure quarto-figure-center">
+<figure class="figure">
+<p><img src="Images/Q3eAssignment3.png" class="img-fluid figure-img"></p>
+<figcaption>Q3eAssignment3</figcaption>
+</figure>
+</div>
+<ol start="6" type="i">
+<li>Add names to the list</li>
+</ol>
+<div class="quarto-figure quarto-figure-center">
+<figure class="figure">
+<p><img src="Images/Q3fAssignment3.png" class="img-fluid figure-img"></p>
+<figcaption>Q3fAssignment3</figcaption>
+</figure>
+</div>
 </section>
-<section id="social-mobility-inequality-tracker" class="level3">
-<h3 class="anchored" data-anchor-id="social-mobility-inequality-tracker">3. Social Mobility &amp; Inequality Tracker</h3>
-<ul>
-<li>Purpose: Tracks data on economic and social mobility to understand inequality trends in different regions.</li>
-<li>Functions:
-<ul>
-<li>Stores data on income, education, and employment trends across communities.</li>
-<li>Provides comparison charts on social mobility rates based on location, gender, and ethnicity.</li>
-<li>Recommends policies and resources to improve access to opportunities.</li>
-</ul></li>
-<li>Simple Interface Design: An interactive heat map and dashboard display income trends, education levels, and employment data by region. Users can compare multiple areas, view bar charts, and access policy recommendations. The interface supports searching, visual comparisons, and report downloads.</li>
-</ul>
-</section>
-<section id="question-3" class="level3">
-<h3 class="anchored" data-anchor-id="question-3">Question 3</h3>
-<p>If data can be retrieved efficiently and effectively, why is data mining needed?</p>
-<p>Data mining is essential because it allows us to extract meaningful insights from large datasets beyond just retrieving stored data. Below are key reasons why data mining is needed:</p>
-</section>
-<section id="finding-hidden-patterns-relationships" class="level3">
-<h3 class="anchored" data-anchor-id="finding-hidden-patterns-relationships">1. Finding Hidden Patterns &amp; Relationships</h3>
-<ul>
-<li>Databases can retrieve data efficiently, but they don’t automatically find patterns or trends.</li>
-</ul>
-</section>
-<section id="predictive-analytics-forecasting" class="level3">
-<h3 class="anchored" data-anchor-id="predictive-analytics-forecasting">2. Predictive Analytics &amp; Forecasting</h3>
-<ul>
-<li>Data mining helps predict future trends based on historical data.</li>
-</ul>
-</section>
-<section id="decision-making-automation" class="level3">
-<h3 class="anchored" data-anchor-id="decision-making-automation">3. Decision-Making &amp; Automation</h3>
-<ul>
-<li>Businesses use data mining to make data-driven decisions rather than relying on intuition.</li>
-</ul>
-</section>
-<section id="reducing-complexity-in-big-data" class="level3">
-<h3 class="anchored" data-anchor-id="reducing-complexity-in-big-data">4. Reducing Complexity in Big Data</h3>
-<ul>
-<li>Big data is too large and complex for traditional database queries alone. Data mining helps extract valuable insights from massive datasets.</li>
-</ul>
-</section>
-<section id="competitive-advantage-business-intelligence" class="level3">
-<h3 class="anchored" data-anchor-id="competitive-advantage-business-intelligence">5. Competitive Advantage &amp; Business Intelligence</h3>
-<ul>
-<li>Companies use data mining to gain a competitive edge by identifying market trends, customer preferences, and business risks.</li>
-</ul>
-</section>
-</section>
-<section id="question-6" class="level2">
-<h2 class="anchored" data-anchor-id="question-6">Question 6</h2>
-<p>Describe at least three tables that might be used to store information in a social network/social media system such as Twitter or Reddit.</p>
-<p>A social media platform like Twitter or Reddit would require multiple tables for structured data management. Below are three essential tables:</p>
-<section id="users-table" class="level3">
-<h3 class="anchored" data-anchor-id="users-table">1. Users Table</h3>
-<ul>
-<li><p>Stores information about users.</p>
-<table class="caption-top table">
-<thead>
-<tr class="header">
-<th>Column Name</th>
-<th>Description</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td>User ID</td>
-<td>Unique identifier for each user</td>
-</tr>
-<tr class="even">
-<td>Username</td>
-<td>Display name of the user</td>
-</tr>
-<tr class="odd">
-<td>Email</td>
-<td>Contact email</td>
-</tr>
-<tr class="even">
-<td>Password</td>
-<td>Encrypted password</td>
-</tr>
-<tr class="odd">
-<td>Date Joined</td>
-<td>Date when the user registered</td>
-</tr>
-</tbody>
-</table></li>
-</ul>
-</section>
-<section id="posts-table" class="level3">
-<h3 class="anchored" data-anchor-id="posts-table">2. Posts Table</h3>
-<ul>
-<li><p>Stores tweets or Reddit posts.</p>
-<table class="caption-top table">
-<thead>
-<tr class="header">
-<th>Column Name</th>
-<th>Description</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td>Post ID</td>
-<td>Unique identifier for each post</td>
-</tr>
-<tr class="even">
-<td>User ID</td>
-<td>ID of the user who posted</td>
-</tr>
-<tr class="odd">
-<td>Post Content</td>
-<td>Text or media content</td>
-</tr>
-<tr class="even">
-<td>Created At</td>
-<td>Timestamp of post creation</td>
-</tr>
-<tr class="odd">
-<td>Likes Count</td>
-<td>Number of likes</td>
-</tr>
-<tr class="even">
-<td>Comments Count</td>
-<td>Number of comments</td>
-</tr>
-</tbody>
-</table></li>
-</ul>
-</section>
-<section id="followers-table" class="level3">
-<h3 class="anchored" data-anchor-id="followers-table">3. Followers Table</h3>
-<ul>
-<li><p>Stores relationships between users.</p>
-<table class="caption-top table">
-<thead>
-<tr class="header">
-<th>Column Name</th>
-<th>Description</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td>Follower ID</td>
-<td>ID of the user who follows</td>
-</tr>
-<tr class="even">
-<td>Followed ID</td>
-<td>ID of the user being followed</td>
-</tr>
-<tr class="odd">
-<td>Date Followed</td>
-<td>Timestamp of when the follow occurred</td>
-</tr>
-</tbody>
-</table></li>
-</ul>
-<hr>
-</section>
+<section id="question-4" class="level2">
+<h2 class="anchored" data-anchor-id="question-4">Question 4</h2>
+<p>Find instructor (with name and ID) who has never given an A grade in any course she or he has taught. (Instructors who have never taught a course trivially satisfy this condition.)</p>
+<div class="quarto-figure quarto-figure-center">
+<figure class="figure">
+<p><img src="Images/Q4Assignment3.png" class="img-fluid figure-img"></p>
+<figcaption>Q4Assignment3</figcaption>
+</figure>
+</div>
+
+
 </section>
 </section>
 
-</main>
-<!-- /main column -->
+</main> <!-- /main -->
 <script id="quarto-html-after-body" type="application/javascript">
 window.document.addEventListener("DOMContentLoaded", function (event) {
   const toggleBodyColorMode = (bsSheetEl) => {
