--- a/Assignment1.html
+++ b/Assignment1.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>assignment1</title>
+<title>assignment1 – Eman Ajmal</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -23,24 +23,153 @@ ul.task-list li input[type="checkbox"] {
 </style>
 
 
-<script src="Assignment1_files/libs/clipboard/clipboard.min.js"></script>
-<script src="Assignment1_files/libs/quarto-html/quarto.js"></script>
-<script src="Assignment1_files/libs/quarto-html/popper.min.js"></script>
-<script src="Assignment1_files/libs/quarto-html/tippy.umd.min.js"></script>
-<script src="Assignment1_files/libs/quarto-html/anchor.min.js"></script>
-<link href="Assignment1_files/libs/quarto-html/tippy.css" rel="stylesheet">
-<link href="Assignment1_files/libs/quarto-html/quarto-syntax-highlighting.css" rel="stylesheet" id="quarto-text-highlighting-styles">
-<script src="Assignment1_files/libs/bootstrap/bootstrap.min.js"></script>
-<link href="Assignment1_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="Assignment1_files/libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
+<script src="site_libs/quarto-nav/quarto-nav.js"></script>
+<script src="site_libs/quarto-nav/headroom.min.js"></script>
+<script src="site_libs/clipboard/clipboard.min.js"></script>
+<script src="site_libs/quarto-search/autocomplete.umd.js"></script>
+<script src="site_libs/quarto-search/fuse.min.js"></script>
+<script src="site_libs/quarto-search/quarto-search.js"></script>
+<meta name="quarto:offset" content="./">
+<script src="site_libs/quarto-html/quarto.js"></script>
+<script src="site_libs/quarto-html/popper.min.js"></script>
+<script src="site_libs/quarto-html/tippy.umd.min.js"></script>
+<script src="site_libs/quarto-html/anchor.min.js"></script>
+<link href="site_libs/quarto-html/tippy.css" rel="stylesheet">
+<link href="site_libs/quarto-html/quarto-syntax-highlighting.css" rel="stylesheet" id="quarto-text-highlighting-styles">
+<script src="site_libs/bootstrap/bootstrap.min.js"></script>
+<link href="site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
+<link href="site_libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
+<script id="quarto-search-options" type="application/json">{
+  "location": "navbar",
+  "copy-button": false,
+  "collapse-after": 3,
+  "panel-placement": "end",
+  "type": "overlay",
+  "limit": 50,
+  "keyboard-shortcut": [
+    "f",
+    "/",
+    "s"
+  ],
+  "show-item-context": false,
+  "language": {
+    "search-no-results-text": "No results",
+    "search-matching-documents-text": "matching documents",
+    "search-copy-link-title": "Copy link to search",
+    "search-hide-matches-text": "Hide additional matches",
+    "search-more-match-text": "more match in this document",
+    "search-more-matches-text": "more matches in this document",
+    "search-clear-button-title": "Clear",
+    "search-text-placeholder": "",
+    "search-detached-cancel-button-title": "Cancel",
+    "search-submit-button-title": "Submit",
+    "search-label": "Search"
+  }
+}</script>
 
 
+<link rel="stylesheet" href="styles.css">
 </head>
 
-<body class="fullcontent">
+<body class="nav-fixed">
 
-<div id="quarto-content" class="page-columns page-rows-contents page-layout-article">
-
+<div id="quarto-search-results"></div>
+  <header id="quarto-header" class="headroom fixed-top">
+    <nav class="navbar navbar-expand-lg " data-bs-theme="dark">
+      <div class="navbar-container container-fluid">
+      <div class="navbar-brand-container mx-auto">
+    <a class="navbar-brand" href="./index.html">
+    <span class="navbar-title">Eman Ajmal</span>
+    </a>
+  </div>
+            <div id="quarto-search" class="" title="Search"></div>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" role="menu" aria-expanded="false" aria-label="Toggle navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">
+  <span class="navbar-toggler-icon"></span>
+</button>
+          <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav navbar-nav-scroll ms-auto">
+  <li class="nav-item">
+    <a class="nav-link" href="./index.html"> 
+<span class="menu-text">Home</span></a>
+  </li>  
+  <li class="nav-item">
+    <a class="nav-link" href="./About.qmd"> 
+<span class="menu-text">About</span></a>
+  </li>  
+  <li class="nav-item">
+    <a class="nav-link" href="./Project.html"> 
+<span class="menu-text">Project</span></a>
+  </li>  
+  <li class="nav-item dropdown ">
+    <a class="nav-link dropdown-toggle" href="#" id="nav-menu-assignments" role="link" data-bs-toggle="dropdown" aria-expanded="false">
+ <span class="menu-text">Assignments</span>
+    </a>
+    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="nav-menu-assignments">    
+        <li>
+    <a class="dropdown-item" href="./Assignment1.html">
+ <span class="dropdown-text">Assignment 1</span></a>
+  </li>  
+        <li>
+    <a class="dropdown-item" href="./Assignment2.html">
+ <span class="dropdown-text">Assignment 2</span></a>
+  </li>  
+        <li>
+    <a class="dropdown-item" href="./Assignment3.html">
+ <span class="dropdown-text">Assignment 3</span></a>
+  </li>  
+        <li>
+    <a class="dropdown-item" href="./Assignment4.html">
+ <span class="dropdown-text">Assignment 4</span></a>
+  </li>  
+    </ul>
+  </li>
+</ul>
+          </div> <!-- /navcollapse -->
+            <div class="quarto-navbar-tools">
+</div>
+      </div> <!-- /container-fluid -->
+    </nav>
+</header>
+<!-- content -->
+<div id="quarto-content" class="quarto-container page-columns page-rows-contents page-layout-article page-navbar">
+<!-- sidebar -->
+<!-- margin-sidebar -->
+    <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
+        <nav id="TOC" role="doc-toc" class="toc-active">
+    <h2 id="toc-title">On this page</h2>
+   
+  <ul>
+  <li><a href="#assignment-1" id="toc-assignment-1" class="nav-link active" data-scroll-target="#assignment-1">Assignment 1</a>
+  <ul class="collapse">
+  <li><a href="#question-1" id="toc-question-1" class="nav-link" data-scroll-target="#question-1">Question 1</a>
+  <ul class="collapse">
+  <li><a href="#online-banking" id="toc-online-banking" class="nav-link" data-scroll-target="#online-banking">1. Online Banking</a></li>
+  <li><a href="#e-commerce-e.g.-amazon" id="toc-e-commerce-e.g.-amazon" class="nav-link" data-scroll-target="#e-commerce-e.g.-amazon">2. E-commerce (e.g., Amazon)</a></li>
+  <li><a href="#university-management-systems" id="toc-university-management-systems" class="nav-link" data-scroll-target="#university-management-systems">3. University Management Systems</a></li>
+  </ul></li>
+  <li><a href="#question-2" id="toc-question-2" class="nav-link" data-scroll-target="#question-2">Question 2</a>
+  <ul class="collapse">
+  <li><a href="#community-well-being-tracker" id="toc-community-well-being-tracker" class="nav-link" data-scroll-target="#community-well-being-tracker">1. Community Well-Being Tracker</a></li>
+  <li><a href="#digital-public-opinion-analyzer" id="toc-digital-public-opinion-analyzer" class="nav-link" data-scroll-target="#digital-public-opinion-analyzer">2. Digital Public Opinion Analyzer</a></li>
+  <li><a href="#social-mobility-inequality-tracker" id="toc-social-mobility-inequality-tracker" class="nav-link" data-scroll-target="#social-mobility-inequality-tracker">3. Social Mobility &amp; Inequality Tracker</a></li>
+  <li><a href="#question-3" id="toc-question-3" class="nav-link" data-scroll-target="#question-3">Question 3</a></li>
+  <li><a href="#finding-hidden-patterns-relationships" id="toc-finding-hidden-patterns-relationships" class="nav-link" data-scroll-target="#finding-hidden-patterns-relationships">1. Finding Hidden Patterns &amp; Relationships</a></li>
+  <li><a href="#predictive-analytics-forecasting" id="toc-predictive-analytics-forecasting" class="nav-link" data-scroll-target="#predictive-analytics-forecasting">2. Predictive Analytics &amp; Forecasting</a></li>
+  <li><a href="#decision-making-automation" id="toc-decision-making-automation" class="nav-link" data-scroll-target="#decision-making-automation">3. Decision-Making &amp; Automation</a></li>
+  <li><a href="#reducing-complexity-in-big-data" id="toc-reducing-complexity-in-big-data" class="nav-link" data-scroll-target="#reducing-complexity-in-big-data">4. Reducing Complexity in Big Data</a></li>
+  <li><a href="#competitive-advantage-business-intelligence" id="toc-competitive-advantage-business-intelligence" class="nav-link" data-scroll-target="#competitive-advantage-business-intelligence">5. Competitive Advantage &amp; Business Intelligence</a></li>
+  </ul></li>
+  <li><a href="#question-6" id="toc-question-6" class="nav-link" data-scroll-target="#question-6">Question 6</a>
+  <ul class="collapse">
+  <li><a href="#users-table" id="toc-users-table" class="nav-link" data-scroll-target="#users-table">1. Users Table</a></li>
+  <li><a href="#posts-table" id="toc-posts-table" class="nav-link" data-scroll-target="#posts-table">2. Posts Table</a></li>
+  <li><a href="#followers-table" id="toc-followers-table" class="nav-link" data-scroll-target="#followers-table">3. Followers Table</a></li>
+  </ul></li>
+  </ul></li>
+  </ul>
+</nav>
+    </div>
+<!-- main -->
 <main class="content" id="quarto-document-content">
 
 
@@ -259,12 +388,13 @@ ul.task-list li input[type="checkbox"] {
 </table></li>
 </ul>
 <hr>
+
+
 </section>
 </section>
 </section>
 
-</main>
-<!-- /main column -->
+</main> <!-- /main -->
 <script id="quarto-html-after-body" type="application/javascript">
 window.document.addEventListener("DOMContentLoaded", function (event) {
   const toggleBodyColorMode = (bsSheetEl) => {
