--- a/Assignment3.html
+++ b/Assignment3.html
@@ -93,7 +93,7 @@ ul.task-list li input[type="checkbox"] {
 <span class="menu-text">Home</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link" href="./About.html"> 
+    <a class="nav-link" href="./About.qmd"> 
 <span class="menu-text">About</span></a>
   </li>  
   <li class="nav-item">
@@ -110,7 +110,7 @@ ul.task-list li input[type="checkbox"] {
  <span class="dropdown-text">Assignment 1</span></a>
   </li>  
         <li>
-    <a class="dropdown-item" href="./Assignment2.qmd">
+    <a class="dropdown-item" href="./Assignment2.html">
  <span class="dropdown-text">Assignment 2</span></a>
   </li>  
         <li>
