--- a/Assignment3.html
+++ b/Assignment3.html
@@ -160,24 +160,17 @@ ul.task-list li input[type="checkbox"] {
 <h2 class="anchored" data-anchor-id="question-2">Question 2</h2>
 <p>Write SQL codes to get a list of:</p>
 <ol type="i">
-<li><p>Students IDs (hint: from the takes relation) <img src="Images/Q1Assignment3.png" class="img-fluid" alt="Q1Assignment3"></p></li>
-<li><p>Instructors</p></li>
+<li>Students IDs (hint: from the takes relation)</li>
 </ol>
-<div class="quarto-figure quarto-figure-center">
-<figure class="figure">
-<p><img src="Images/Q2bAssignment3.png" class="img-fluid figure-img"></p>
-<figcaption>Q2bAssignment3</figcaption>
-</figure>
-</div>
+<p><img src="Images/Q2Assignment3.png" class="img-fluid"></p>
+<ol start="2" type="i">
+<li>Instructors</li>
+</ol>
+<p><img src="Images/Q2bAssignment3.png" class="img-fluid"></p>
 <ol start="3" type="i">
 <li>Departments</li>
 </ol>
-<div class="quarto-figure quarto-figure-center">
-<figure class="figure">
-<p><img src="Images/Q2cAssignment3.png" class="img-fluid figure-img"></p>
-<figcaption>Q2cAssignment3</figcaption>
-</figure>
-</div>
+<p><img src="Images/Q2cAssignment3.png" class="img-fluid"></p>
 </section>
 <section id="question-3" class="level2">
 <h2 class="anchored" data-anchor-id="question-3">Question 3</h2>
@@ -185,59 +178,32 @@ ul.task-list li input[type="checkbox"] {
 <ol type="i">
 <li>Find the ID and name of each student who has taken at least one Comp. Sci. course; make sure there are no duplicate names in the result.</li>
 </ol>
-<div class="quarto-figure quarto-figure-center">
-<figure class="figure">
-<p><img src="Images/Q3aAssignment3.png" class="img-fluid figure-img"></p>
-<figcaption>Q3aAssignmnet3</figcaption>
-</figure>
-</div>
+<p><img src="Images/Q3aAssignment3.png" class="img-fluid"></p>
 <ol start="2" type="i">
-<li><p>Add grades to the list <img src="Images/Q3bAssignment3.png" class="img-fluid" alt="Q3bAssignment3"></p></li>
-<li><p>Find the ID and name of each student who has not taken any course offered before 2017.</p></li>
+<li>Add grades to the list</li>
 </ol>
-<div class="quarto-figure quarto-figure-center">
-<figure class="figure">
-<p><img src="Images/Q3cAssignment3.png" class="img-fluid figure-img"></p>
-<figcaption>Q3cAssignment3</figcaption>
-</figure>
-</div>
+<p><img src="Images/Q3bAssignment3.png" class="img-fluid"></p>
+<ol start="3" type="i">
+<li>Find the ID and name of each student who has not taken any course offered before 2017.</li>
+</ol>
+<p><img src="Images/Q3cAssignment3.png" class="img-fluid"></p>
 <ol start="4" type="i">
 <li>For each department, find the maximum salary of instructors in that department. You may assume that every department has at least one instructor.</li>
 </ol>
-<div class="quarto-figure quarto-figure-center">
-<figure class="figure">
-<p><img src="Images/Q3dAssignment3.png" class="img-fluid figure-img"></p>
-<figcaption>Q3dAssignment3</figcaption>
-</figure>
-</div>
+<p><img src="Images/Q3dAssignment3.png" class="img-fluid"></p>
 <ol start="22" type="a">
 <li>Find the lowest, across all departments, of the per-department maximum salary computed by the preceding query.</li>
 </ol>
-<div class="quarto-figure quarto-figure-center">
-<figure class="figure">
-<p><img src="Images/Q3eAssignment3.png" class="img-fluid figure-img"></p>
-<figcaption>Q3eAssignment3</figcaption>
-</figure>
-</div>
+<p><img src="Images/Q3eAssignment3.png" class="img-fluid"></p>
 <ol start="6" type="i">
 <li>Add names to the list</li>
 </ol>
-<div class="quarto-figure quarto-figure-center">
-<figure class="figure">
-<p><img src="Images/Q3fAssignment3.png" class="img-fluid figure-img"></p>
-<figcaption>Q3fAssignment3</figcaption>
-</figure>
-</div>
+<p><img src="Images/Q3fAssignment3.png" class="img-fluid"></p>
 </section>
 <section id="question-4" class="level2">
 <h2 class="anchored" data-anchor-id="question-4">Question 4</h2>
 <p>Find instructor (with name and ID) who has never given an A grade in any course she or he has taught. (Instructors who have never taught a course trivially satisfy this condition.)</p>
-<div class="quarto-figure quarto-figure-center">
-<figure class="figure">
-<p><img src="Images/Q4Assignment3.png" class="img-fluid figure-img"></p>
-<figcaption>Q4Assignment3</figcaption>
-</figure>
-</div>
+<p><img src="Images/Q4Assignment3.png" class="img-fluid"></p>
 
 
 </section>
