--- a/Assignment4.html
+++ b/Assignment4.html
@@ -182,7 +182,7 @@ ul.task-list li input[type="checkbox"] {
 <li><p>Draw the E-R diagram using draw.io.</p></li>
 <li><p>Expand to all teams in the league (Hint: add team entity)</p></li>
 </ol>
-<p><img src="Images/Q2Assignment4.png" class="img-fluid"></p>
+<p><img src="_site/Images/Q2Assignment4.png" class="img-fluid"></p>
 </section>
 <section id="question-3" class="level2">
 <h2 class="anchored" data-anchor-id="question-3">Question 3</h2>
@@ -190,7 +190,7 @@ ul.task-list li input[type="checkbox"] {
 <ol start="2" type="i">
 <li>Write an SQL query using the university schema to find the ID of each student who has never taken a course at the university. Do this using no subqueries and no set operations (use an outer join).</li>
 </ol>
-<p><img src="Images/Q3bAssignment4.png" class="img-fluid"></p>
+<p><img src="_site/Images/Q3bAssignment4.png" class="img-fluid"></p>
 <ol start="3" type="i">
 <li>Consider the following database, write a query to find the ID of each employee with no manager. Note that an employee may simply have no manager listed or may have a null manager(use natural left outer join).</li>
 </ol>
