--- a/Assignment2.html
+++ b/Assignment2.html
@@ -121,6 +121,10 @@ ul.task-list li input[type="checkbox"] {
     <a class="dropdown-item" href="./Assignment4.html">
  <span class="dropdown-text">Assignment 4</span></a>
   </li>  
+        <li>
+    <a class="dropdown-item" href="./Assignment5.html">
+ <span class="dropdown-text">Assignment 5</span></a>
+  </li>  
     </ul>
   </li>
 </ul>
