--- a/Assignment5.html
+++ b/Assignment5.html
@@ -220,39 +220,41 @@ manages(employee_id, manager_id)</p>
 <ol type="i">
 <li>Find ID and name of employees who live in the same city as the location of their company:</li>
 </ol>
-<p>SELECT e.ID, e.name FROM employee AS e, works AS w, company AS c WHERE e.ID = w.ID AND w.company_id = c.company_id AND e.city = c.city;</p>
+<p>SELECT e.ID, e.name<br>
+FROM employee AS e, works AS w, company AS c<br>
+WHERE e.ID = w.ID AND w.company_id = c.company_id AND e.city = c.city;</p>
 <ol start="2" type="i">
 <li>Find ID and name of employees who live on the same street and in the same city as their manager:</li>
 </ol>
-<p>SELECT e.ID, e.name</p>
-<p>FROM employee AS e, manages AS m, employee AS mngr</p>
-<p>WHERE e.ID = m.employee_id AND m.manager_id = mngr.ID</p>
-<p>AND e.city = mngr.city AND e.street = mngr.street;</p>
+<p>SELECT e.ID, e.name<br>
+FROM employee AS e, manages AS m, employee AS mngr<br>
+WHERE e.ID = m.employee_id AND m.manager_id = mngr.ID<br>
+AND e.city = mngr.city AND e.street = mngr.street;</p>
 <ol start="3" type="i">
 <li>Find ID and name of employees who earn more than the average salary of all employees in their company:</li>
 </ol>
-<p>SELECT e.ID, e.name</p>
-<p>FROM employee AS e, works AS w</p>
-<p>WHERE e.ID = w.ID AND w.salary &gt; ( SELECT AVG(w2.salary)</p>
-<p>FROM works AS w2</p>
-<p>WHERE w2.company_id = w.company_id</p>
+<p>SELECT e.ID, e.name<br>
+FROM employee AS e, works AS w<br>
+WHERE e.ID = w.ID AND w.salary &gt; ( SELECT AVG(w2.salary)<br>
+FROM works AS w2<br>
+WHERE w2.company_id = w.company_id</p>
 </section>
 <section id="b-whats-wrong-with-this-sql-query" class="level1">
 <h1>b: What’s wrong with this SQL query?</h1>
-<p>SELECT name, title</p>
-<p>FROM instructor NATURAL JOIN teaches NATURAL JOIN section NATURAL JOIN course</p>
-<p>WHERE semester = ‘Spring’ AND year = 2017;</p>
+<p>SELECT name, title<br>
+FROM instructor NATURAL JOIN teaches NATURAL JOIN section NATURAL JOIN course<br>
+WHERE semester = ‘Spring’ AND year = 2017;</p>
 <p>Problem: This query uses NATURAL JOIN, which joins tables based on all columns with the same name. This can cause unintended matches, especially if tables have generic column names like ID or course_id.</p>
 <p>Fix: Use explicit JOINs to clearly specify matching fields.</p>
 <p>Corrected Query:</p>
-<p>SELECT i.name, c.title</p>
-<p>FROM instructor AS i</p>
-<p>JOIN teaches AS t ON i.ID = t.ID</p>
-<p>JOIN section AS s ON t.course_id = s.course_id</p>
-<p>AND t.sec_id = s.sec_id</p>
-<p>AND t.semester = s.semester</p>
-<p>AND t.year = s.year JOIN course AS c ON s.course_id = c.course_id</p>
-<p>WHERE s.semester = ‘Spring’ AND s.year = 2017;</p>
+<p>SELECT i.name, c.title<br>
+FROM instructor AS i<br>
+JOIN teaches AS t ON i.ID = t.ID<br>
+JOIN section AS s ON t.course_id = s.course_id<br>
+AND t.sec_id = s.sec_id<br>
+AND t.semester = s.semester<br>
+AND t.year = s.year JOIN course AS c ON s.course_id = c.course_id<br>
+WHERE s.semester = ‘Spring’ AND s.year = 2017;</p>
 
 
 </section>
