--- a/Assignment6.html
+++ b/Assignment6.html
@@ -160,7 +160,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
  <span class="dropdown-text">Assignment 5</span></a>
   </li>  
         <li>
-    <a class="dropdown-item" href="./Assignmnet6.qmd">
+    <a class="dropdown-item" href="./Assignment6.html">
  <span class="dropdown-text">Assignment 6</span></a>
   </li>  
     </ul>
