--- a/Assignment2.html
+++ b/Assignment2.html
@@ -125,6 +125,10 @@ ul.task-list li input[type="checkbox"] {
     <a class="dropdown-item" href="./Assignment5.html">
  <span class="dropdown-text">Assignment 5</span></a>
   </li>  
+        <li>
+    <a class="dropdown-item" href="./Assignment6.html">
+ <span class="dropdown-text">Assignment 6</span></a>
+  </li>  
     </ul>
   </li>
 </ul>
@@ -143,9 +147,7 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">On this page</h2>
    
   <ul>
-  <li><a href="#assignment-2" id="toc-assignment-2" class="nav-link active" data-scroll-target="#assignment-2">Assignment 2</a>
-  <ul class="collapse">
-  <li><a href="#question-1-differences-between-relation-schema-relation-and-instance" id="toc-question-1-differences-between-relation-schema-relation-and-instance" class="nav-link" data-scroll-target="#question-1-differences-between-relation-schema-relation-and-instance">Question 1: Differences Between Relation Schema, Relation, and Instance</a>
+  <li><a href="#question-1-differences-between-relation-schema-relation-and-instance" id="toc-question-1-differences-between-relation-schema-relation-and-instance" class="nav-link active" data-scroll-target="#question-1-differences-between-relation-schema-relation-and-instance">Question 1: Differences Between Relation Schema, Relation, and Instance</a>
   <ul class="collapse">
   <li><a href="#relation-schema" id="toc-relation-schema" class="nav-link" data-scroll-target="#relation-schema">1. Relation Schema</a></li>
   <li><a href="#relation" id="toc-relation" class="nav-link" data-scroll-target="#relation">2. Relation</a></li>
@@ -165,7 +167,6 @@ ul.task-list li input[type="checkbox"] {
   <ul class="collapse">
   <li><a href="#primary-keys" id="toc-primary-keys" class="nav-link" data-scroll-target="#primary-keys">Primary Keys</a></li>
   <li><a href="#foreign-keys" id="toc-foreign-keys" class="nav-link" data-scroll-target="#foreign-keys">Foreign Keys</a></li>
-  </ul></li>
   </ul></li>
   </ul>
 </nav>
@@ -192,8 +193,6 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<section id="assignment-2" class="level1">
-<h1>Assignment 2</h1>
 <section id="question-1-differences-between-relation-schema-relation-and-instance" class="level2">
 <h2 class="anchored" data-anchor-id="question-1-differences-between-relation-schema-relation-and-instance">Question 1: Differences Between Relation Schema, Relation, and Instance</h2>
 <section id="relation-schema" class="level3">
@@ -425,7 +424,6 @@ ul.task-list li input[type="checkbox"] {
 <hr>
 
 
-</section>
 </section>
 </section>
 
