--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Eman Ajmal</title>
+<title>Hi, I am Eman Ajmal – Eman Ajmal</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -126,7 +126,7 @@ ul.task-list li input[type="checkbox"] {
  <span class="dropdown-text">Assignment 5</span></a>
   </li>  
         <li>
-    <a class="dropdown-item" href="./Assignmnet6.qmd">
+    <a class="dropdown-item" href="./Assignment6.html">
  <span class="dropdown-text">Assignment 6</span></a>
   </li>  
     </ul>
@@ -142,15 +142,21 @@ ul.task-list li input[type="checkbox"] {
 <div id="quarto-content" class="quarto-container page-columns page-rows-contents page-layout-article page-navbar">
 <!-- sidebar -->
 <!-- margin-sidebar -->
-    <div id="quarto-margin-sidebar" class="sidebar margin-sidebar zindex-bottom">
-        
+    <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
+        <nav id="TOC" role="doc-toc" class="toc-active">
+    <h2 id="toc-title">On this page</h2>
+   
+  <ul>
+  <li><a href="#connect-with-me" id="toc-connect-with-me" class="nav-link active" data-scroll-target="#connect-with-me">Connect with me</a></li>
+  </ul>
+</nav>
     </div>
 <!-- main -->
 <main class="content" id="quarto-document-content">
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Eman Ajmal</h1>
+<h1 class="title">Hi, I am Eman Ajmal</h1>
 </div>
 
 
@@ -167,9 +173,51 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<p>This is Eman Ajmal’s webiste. I am a social analyst.</p>
+<style>
+.profile-container {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  margin-bottom: 30px;
+}
+
+.profile-container img {
+  width: 180px;
+  border-radius: 12px;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+}
+
+.bio-text {
+  max-width: 600px;
+}
+
+.social-links a {
+  margin-right: 12px;
+  text-decoration: none;
+}
+</style>
+<div class="profile-container">
+<p><img src="images/Profile photo-01.jpg" alt="Eman Ajmal"></p>
+<div class="bio-text">
+<p>I’m a <strong>social data analyst</strong> passionate about turning real-world problems into actionable insights.</p>
+<p>I care deeply about development, equity, and evidence-based reform, and I’m driven by the belief that small interventions, rooted in data can spark long-term impact.</p>
+<p>Currently pursuing my Master’s at <strong>UT Dallas</strong>, I focus on the intersection of <strong>data, people, and policy</strong>, and aim to build systems that inform, include, and improve.</p>
+</div>
+</div>
+<blockquote class="blockquote">
+<p><em>“Data is more than numbers — it’s people, stories, and change waiting to happen.”</em></p>
+</blockquote>
+<hr>
+<section id="connect-with-me" class="level3">
+<h3 class="anchored" data-anchor-id="connect-with-me">Connect with me</h3>
+<div class="social-links">
+<p><a href="https://www.linkedin.com/in/eman-ajmal/"><img src="https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&amp;logo=linkedin&amp;logoColor=white.png" class="img-fluid" alt="LinkedIn"></a><br>
+<a href="https://www.instagram.com/emanajmal"><img src="https://img.shields.io/badge/Instagram-E4405F?style=for-the-badge&amp;logo=instagram&amp;logoColor=white.png" class="img-fluid" alt="Instagram"></a><br>
+<a href="mailto:dal106137@utdallas.edu"><img src="https://img.shields.io/badge/Email-D14836?style=for-the-badge&amp;logo=gmail&amp;logoColor=white.png" class="img-fluid" alt="Email"></a></p>
+</div>
 
 
+</section>
 
 </main> <!-- /main -->
 <script id="quarto-html-after-body" type="application/javascript">
