--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ ul.task-list li input[type="checkbox"] {
 }
 </style>
 <div class="profile-container">
-<p><img src="images/Profile photo-01.jpg" alt="Eman Ajmal"></p>
+<p><img src="Images/Photo.JPG" alt="Eman Ajmal" style="height:220px; border-radius: 12px; margin-right: 30px; box-shadow: 0 2px 10px rgba(0,0,0,0.08);"></p>
 <div class="bio-text">
 <p>I’m a <strong>social data analyst</strong> passionate about turning real-world problems into actionable insights.</p>
 <p>I care deeply about development, equity, and evidence-based reform, and I’m driven by the belief that small interventions, rooted in data can spark long-term impact.</p>
