--- a/Assignment1.html
+++ b/Assignment1.html
@@ -93,7 +93,7 @@ ul.task-list li input[type="checkbox"] {
 <span class="menu-text">Home</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link" href="./About.html"> 
+    <a class="nav-link" href="./About.qmd"> 
 <span class="menu-text">About</span></a>
   </li>  
   <li class="nav-item">
