--- a/Assignment2.html
+++ b/Assignment2.html
@@ -92,19 +92,11 @@ ul.task-list li input[type="checkbox"] {
     <a class="nav-link" href="./index.html"> 
 <span class="menu-text">Home</span></a>
   </li>  
-  <li class="nav-item">
-    <a class="nav-link" href="./About.qmd"> 
-<span class="menu-text">About</span></a>
-  </li>  
-  <li class="nav-item">
-    <a class="nav-link" href="./Project.html"> 
-<span class="menu-text">Project</span></a>
-  </li>  
   <li class="nav-item dropdown ">
-    <a class="nav-link dropdown-toggle" href="#" id="nav-menu-assignments" role="link" data-bs-toggle="dropdown" aria-expanded="false">
- <span class="menu-text">Assignments</span>
+    <a class="nav-link dropdown-toggle" href="#" id="nav-menu-epps-6354" role="link" data-bs-toggle="dropdown" aria-expanded="false">
+ <span class="menu-text">EPPS 6354</span>
     </a>
-    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="nav-menu-assignments">    
+    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="nav-menu-epps-6354">    
         <li>
     <a class="dropdown-item" href="./Assignment1.html">
  <span class="dropdown-text">Assignment 1</span></a>
@@ -128,6 +120,25 @@ ul.task-list li input[type="checkbox"] {
         <li>
     <a class="dropdown-item" href="./Assignment6.html">
  <span class="dropdown-text">Assignment 6</span></a>
+  </li>  
+    </ul>
+  </li>
+  <li class="nav-item dropdown ">
+    <a class="nav-link dropdown-toggle" href="#" id="nav-menu-epps-6302" role="link" data-bs-toggle="dropdown" aria-expanded="false">
+ <span class="menu-text">EPPS 6302</span>
+    </a>
+    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="nav-menu-epps-6302">    
+        <li>
+    <a class="dropdown-item" href="./EPPS6302_Assignment1.qmd">
+ <span class="dropdown-text">Assignment 1</span></a>
+  </li>  
+        <li>
+    <a class="dropdown-item" href="./EPPS6302_Assignment2.qmd">
+ <span class="dropdown-text">Assignment 2</span></a>
+  </li>  
+        <li>
+    <a class="dropdown-item" href="./EPPS6302_Assignment3.qmd">
+ <span class="dropdown-text">Assignment 3</span></a>
   </li>  
     </ul>
   </li>
