--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ ul.task-list li input[type="checkbox"] {
 <div class="profile-container">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><img src="images/IMG_4557.jpeg" class="quarto-figure quarto-figure-center figure-img" style="border-radius: 12px; margin-right: 30px; box-shadow: 0 2px 10px rgba(0,0,0,0.08);" width="190" height="240"></p>
+<p><img src="Images/IMG_4557.jpeg" class="quarto-figure quarto-figure-center figure-img" style="border-radius: 12px; margin-right: 30px; box-shadow: 0 2px 10px rgba(0,0,0,0.08);" width="190" height="240"></p>
 </figure>
 </div>
 <div class="bio-text">
