--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@ ul.task-list li input[type="checkbox"] {
     <a class="nav-link active" href="./index.html" aria-current="page"> 
 <span class="menu-text">Home</span></a>
   </li>  
+  <li class="nav-item">
+    <a class="nav-link" href="./Users/emanajmal/Documents/Important Files/Eman Ajmal - Resume.docx"> 
+<span class="menu-text">CV</span></a>
+  </li>  
   <li class="nav-item dropdown ">
     <a class="nav-link dropdown-toggle" href="#" id="nav-menu-epps-6354" role="link" data-bs-toggle="dropdown" aria-expanded="false">
  <span class="menu-text">EPPS 6354</span>
